set target blank for destination

--- a/index.html
+++ b/index.html
@@ -246,12 +246,13 @@
                             <h2>Guess The Song!</h2>
                             <hr class="star-primary">
                             <img src="http://s33.postimg.org/iu7x9dn5r/Screen_Shot_2016_05_31_at_9_47_28_AM.png" class="img-responsive img-centered" alt="">
-                            <p>Guess The Song is a musical trivia game that lets the users to choose the correct answer from the generated random song. <a href="http://akhadisurya.github.io/project1/"> Link</a></p>
+                            <p>Guess The Song is a musical trivia game that lets the users to choose the correct answer from the generated random song.<a target="_blank" href="http://akhadisurya.github.io/project1/"> Link</a></p>
                             <ul class="list-inline item-details">
                                 <li>Technologies Used:
                                     <strong>Java Script | jQuery | iTunes | HTML5/ CSS3
                                     </strong>
                                 </li>
+
                             </ul>
                             <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
                         </div>
@@ -275,7 +276,7 @@
                             <h2>Fantasy Dating</h2>
                             <hr class="star-primary">
                             <img src="http://s33.postimg.org/q6cjn8whr/Screen_Shot_2016_05_31_at_10_13_49_AM.png" class="img-responsive img-centered" alt="">
-                            <p>Fantasy Dating is a full CRUD online-dating app that lets the user to match with seeded matches. <a href="https://fantasy-dating.herokuapp.com/"> Link</a></p>
+                            <p>Fantasy Dating is a full CRUD online-dating app that lets the user to match with seeded matches. <a target="_blank" href="https://fantasy-dating.herokuapp.com/"> Link</a></p>
                             <ul class="list-inline item-details">
                                 <li>Technologies Used:
                                     <strong>Ruby on Rails | Emoji Gem | PostgreSQL
@@ -304,7 +305,7 @@
                             <h2>Rosetta Chat</h2>
                             <hr class="star-primary">
                             <img src="http://s33.postimg.org/6l1hnz69r/Screen_Shot_2016_05_31_at_10_25_36_AM.png f" class="img-responsive img-centered" alt="">
-                            <p>Rosetta Chat is a chat app that enables the users to communicate to each other with their preference language. <a href="https://sellfy.com/p/8Q9P/jV3VZ/"> Link</a></p>
+                            <p>Rosetta Chat is a chat app that enables the users to communicate to each other with their preference language. <a target="_blank" href="http://rosettachat.herokuapp.com/"> Link</a></p>
                             <ul class="list-inline item-details">
                                 <li>Technologies Used:
                                     <strong>Express/ Node js | MongoDB | Sockets.io
@@ -333,7 +334,7 @@
                             <h2>You Blog</h2>
                             <hr class="star-primary">
                             <img src="http://s33.postimg.org/h4m6e75tb/Screen_Shot_2016_05_31_at_2_16_40_PM.png" class="img-responsive img-centered" alt="">
-                            <p>You Blog is a full CRUD blog site that lets the users to post any kinds of blogs or stories. <a href="https://you-blog.herokuapp.com/"> Link</a></p>
+                            <p>You Blog is a full CRUD blog site that lets the users to post any kinds of blogs or stories. <a target="_blank" href="https://you-blog.herokuapp.com/"> Link</a></p>
                             <ul class="list-inline item-details">
                                 <li>Technologies Used:
                                     <strong>MEAN Stack | Angular js | Facebook Dev Console | MongoDB
