--- a/index.html
+++ b/index.html
@@ -198,10 +198,10 @@
                                 <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-twitter"></i></a>
                             </li> -->
                             <li>
-                                <a href="https://linkedin.com/in/arvin-hadisurya" class="btn-social btn-outline"><i class="fa fa-fw fa-linkedin"></i></a>
+                                <a target="_blank" href="https://linkedin.com/in/arvin-hadisurya" class="btn-social btn-outline"><i class="fa fa-fw fa-linkedin"></i></a>
                             </li>
                             <li>
-                                <a href="https://github.com/akhadisurya" class="btn-social btn-outline"><i class="fa fa-github" aria-hidden="true"></i></a>
+                                <a target="_blank" href="https://github.com/akhadisurya" class="btn-social btn-outline"><i class="fa fa-github" aria-hidden="true"></i></a>
                             </li>
                         </ul>
                     </div>
